themes/si8/less/custom/header-responsive.less
/* Only Medium screen */
@media (min-width: @screen-md) and (max-width: @screen-md-max) {
  .header-main{
    .ricerca{
      section{
        display: block !important;
      }
    }
  }
}
/* Only Small screen */
@media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
  body{
    padding-top: 120px !important;
  }
  .header-main{
    height: 120px;
    #hamburger-toggle {
      margin-top: 35px;
    }
    .site-title{
      padding: 18px 0;
    }
    .icon-social{
      display: none;
    }
    .ricerca{
      margin-top: 35px;
      section{
        display: block !important;
      }
    }
  }
}
/* Extra small screen and lower */
@media (max-width: @screen-xs-max) {
  body{
    padding-top: 170px !important;
  }

  #mainheader{
    &.ridotto{
      .ricerca{
        top: 55px;
        #edit-submit-ricerca-responsive{
          top: -54px
        }
      }
    }
  }

  .header-top .accedi {
    padding: 14px 20px;
  }

  .header-main{
    height: 100px;
    #hamburger-toggle {
      margin-top: 25px;
    }
    .site-title{
      padding: 22px 0;
      font-size: 2.5rem;
      .subtitle{
        font-size: 1.5rem;
      }
    }
    .icon-social{
      display: none;
    }
    .ricerca{
      position: absolute;
      top: 100px;
      right: 0;
      left: 0;
      margin: 0;
      background-color: @brand-secondary;
      #edit-submit-ricerca-responsive{
        position: absolute;
        top: -76px;
        right: 25px;
      }
      #edit-submit-ricerca{
        display: none;
      }
      section{
        display: none;
        margin: 10px 25px;
      }
      .form-group{
        margin: 0;
      }
    }
  }

  .header-down{
    display: none;
  }
}

@media (max-width: @screen-xxs) {
  .site-title{
    padding: 33px 0 !important;
    font-size: 2.25rem !important;
    .subtitle{
      display: none !important;
    }
  }
}

